# anime-machine

./: .gitignore  Cargo.toml
src/: commands.rs  dispatcher.rs  fileinfo.rs  gui.rs  logic.rs  main.rs  project.rs  scene_parse.rs  vscode_workspace.code-workspace
src/commands/: encode.rs  mediainfo.rs  merge.rs  split.rs
src/gui/: controller.rs  worker.rs
