[package]
name = "animemachine"
version = "0.0.0"
authors = ["Dominic DeMarco <awesome3165@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "*"
serde = {version="*", features =["derive"]}
serde_yaml = "*"
serde_json = "*"