[package]
name = "animemachine"
version = "0.0.0"
authors = ["Dominic DeMarco <awesome3165@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "*"
serde = {version="*", features =["derive"]}
serde_yaml = "*"
serde_json = "*"

cpp_core = "0.6.0"
qt_core = "0.5.0"
qt_gui = "0.5.0"
qt_widgets = "0.5.0"
qt_ui_tools = "0.5.0"